_sass/_theme-hacks.scss
/* ... */
.container {
  min-width: 0px !important;
}

body,
body.view-in-course {
  div.window-wrap {
    min-width: inherit;
  }
}

#primary-nav, #secondary-nav {
  .row {
    display: block; // fix nav overlap issue with discussion board
  }
}

#primary-nav,
#secondary-nav,
.wrapper-footer {
  .container,
  .container > div,
  div.container,
  div.container > div {
    padding: 0;
    border: 0;
    background: transparent;
    box-shadow: none;

    /* mocking the bootstrap style rule for consistency throughout page */
    max-width: 1180px;
  }

  footer {
    .copyright {
      text-align: center;
      margin-top: 1em;

      a {
        color: $gym-orange !important;
      }
    }
  }
}

.white-panel,
.container.white-panel {
  background-color: $gym-white;
  border: 1px solid #ccc;
  border-radius: 2px;
  padding: 2.2em;
  padding-top: 1em;
  font: 1.2em/1.5 $gym-text-font-stack;
  margin-top: 20px;
  margin-bottom: 20px;

  ul {
    padding-left: 0;
  }
  a {
    font-family: $gym-text-font-stack;
  }

  h2 {
    font: 900 1em/1.3 $gym-font-stack;
  }

  h3 {
    font: bold 1.2em/1.4 $gym-font-stack;
    color: $gym-black;
    letter-spacing: 0.02em;
    word-spacing: 0.04em;
    margin-top: 1em;
  }
}

.right-gutter {
  border-right: 15px solid $gym-white;
}

#primary-nav {
  height: auto;

  .gym-nav-icon-container:hover {
    background-color: transparent;
  }

  .navbar {
    height: auto;
    border: 0;
    margin: 0;
  }

  .navbar-nav > li > a {
    padding: 10px;
    margin-left: 4px;
    margin-top: 2px;
  }

  .nav li a {
    background-color: transparent;
    color: $gym-orange;

    .caret {
      color: $gym-orange;
    }
  }

  .nav li a:hover {
    //odd specificity to overwrite bootstrap defaults
    background-color: transparent;
    color: $gym-white;
    border-bottom: none;

    .caret {
      color: $gym-white;
    }
  }

  .nav li.dropdown.open {
    background-color: $gym-white;
    a {
      color: $gym-orange;
    }
    a:hover .caret {
      color: $gym-orange;
    }

    .dropdown-menu {
      border: none;
      a:hover {
        color: $gym-black;
      }
    }

    .logged-in-username {
      color: #f89820;
    }
  }

  .navbar-right {
    li > a {
      font: normal 1.2em/1 $gym-font-stack;
    }
  }

  #dropdown {
    display: inline-block;
    color: $gym-orange;
    border: none;
  }

  #dropdown:hover,
  #dropdown:hover span,
  #dropdown:hover span.caret {
    color: $gym-orange;
  }

  #dropdown:hover #dropdown:link:hover {
    color: $gym-orange;
    border: none;
  }

  #dropdown-menu {
    display: none;

    li {
      display: inline;

      a {
        color: $gym-white;
      }

      a:hover,
      anchor:link:hover {
        color: $gym-orange;
        text-decoration: none;
      }
    }
  }

  #dropdown-menu::before {
    display: inline-block;
    width: 0;
    height: 0;
    content: " ";
    line-height: 0;
    background: #000;
    padding: 0 0.2em;
    vertical-align: middle;
    border-top: 0.25em dashed transparent;
    border-left: 0.25em solid #f89820;
    border-bottom: 0.25em dashed transparent;
    margin-left: -0.8em;
  }
}

#secondary-nav {
  height: 70px;
  background-color: $gym-black;
  position: relative;
  z-index: 999;

  > .container {
    padding-top: 10px;
  }

  a {
    font-size: 1.2em;
    color: $gym-white;
    font-family: $gym-font-stack;

    &.gym-button {
      color: $gym-white;
    }
  }

  a:hover {
    color: $gym-orange;
    border-bottom: none;
  }

  .navbar-brand {
    height: auto;
    padding: 0;
    margin-top: 1.75rem;
    margin-left: 15px;
  }

  .navbar-brand:hover,
  .navbar-brand:active,
  .navbar-brand:link {
    background: transparent;
  }

  .navbar-default {
    padding-left: 0;
    padding-right: 0;
    padding-top: 5px;
    background-color: $gym-black;
    border-color: transparent;
    border: none;
    margin-bottom: 0;
    z-index: 100;
  }

  .navbar-right {
    position: relative;
    // top: 6px;
  }

  .navbar-toggle {
    margin-top: 15px;

    &:hover,
    &:focus {
      border: 1px solid $gym-white;
    }
  }
}

@include breakpoint(small, max) {
  .navbar-default {
    .navbar-collapse,
    .navbar-form {
      margin: 9px auto 10px;
    }
  }

  #primary-nav .navbar-nav {
    margin-left: 15px;
    margin-right: 15px;
  }

  #secondary-nav .navbar-nav {
    li {
      &:last-child {
        margin-left: 15px;
        margin-right: 15px;
      }
    }
  }
}

@include breakpoint(medium, min) {
  .navbar-collapse.collapse {
    padding-left: 0;
    padding-right: 0;
  }

  #secondary-nav {
    .navbar-right {
      margin-top: 3px;
    }
  }

  #primary-nav,
  #secondary-nav {
    .row {
      margin-left: auto;
      margin-right: auto;
    }
    .navbar {
      border-radius: 0;
      margin: 0;

      &.collapse {
        padding-left: 0;
        padding-right: 0;
      }
    }
    .navbar-left {
      margin-left: 15px;
    }

    .navbar-right {
      margin-right: 15px;
    }
  }
}

/* global theme styles */

.caret {
  color: $gym-light-gray;
}

body header.global.slim {
  border-bottom: none;
}

header.global {
  margin: 0px;
  box-shadow: none;
  border: none;
  width: inherit;
  height: 120px;
  background-color: $gym-black;

  .container,
  .container.grey {
    min-width: inherit;
  }

  nav {
    .nav-courseware {
      padding-top: 3px;
    }

    .logo {
      clear: left;
      margin-top: 30px;
    }

    //odd amount of specificity required to get around built in style rules - MB
    .cta.cta-register {
      color: $gym-white;
      display: inline-block;
      margin-top: -0.3em;

      b {
        margin-top: 4px;
      }
    }

    .container {
      background: transparent;
    }
  }
}

.content-wrapper#content {
  padding-bottom: 1em;
  background-color: $gym-white;
}
/* ... */

